--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique laborum at possimus accusamus nemo quaerat amet consectetur inventore quo eligendi.</p>
 </body>
 </html>
